<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 	<item
       	android:id="@+id/menu_item_launch"
        android:showAsAction="always"
        android:title="@string/menu_item_launch"/>
    
 	<item
       	android:id="@+id/menu_item_apps"
        android:showAsAction="always"
        android:title="@string/menu_item_apps"/>
 	<item
       	android:id="@+id/menu_item_configure"
        android:showAsAction="always"
        android:title="@string/menu_item_configure"/>

 	<item
       	android:id="@+id/menu_item_organise"
        android:showAsAction="always"
        android:title="@string/menu_item_organise"/>
 	
 	<item
       	android:id="@+id/menu_item_store"
        android:showAsAction="always"
        android:title="@string/menu_item_store"/>
 				
 	<item
       	android:id="@+id/menu_item_about"
        android:showAsAction="never"
        android:title="@string/menu_item_about"/>
    <item
       	android:id="@+id/menu_item_settings"
        android:showAsAction="never"
        android:title="@string/menu_item_settings"/>
    <item
       	android:id="@+id/menu_item_help"
        android:showAsAction="never"
        android:title="@string/menu_item_help"/>
    
</menu>
