<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/lv_margin" >

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/icon_size_m"
        android:layout_height="@dimen/icon_size_m"
        android:layout_margin="@dimen/lv_margin"
        android:contentDescription="@string/txt_blank_string" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lv_margin"
        android:layout_toRightOf="@id/iv_icon"
        android:text="@string/txt_title"
        android:textStyle="bold" />
    
   <TextView
       android:id="@+id/tv_label_package"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@id/tv_title"
       android:layout_below="@id/tv_title"
       android:text="@string/txt_label_package"
       android:textStyle="bold" />

   <TextView
       android:id="@+id/tv_package"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignTop="@id/tv_label_package"
       android:layout_marginLeft="@dimen/lv_margin"
       android:layout_toRightOf="@id/tv_label_package"
       android:text="@string/txt_package"
       android:textStyle="bold" />

  <TextView
      android:id="@+id/tv_label_installed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/tv_title"
      android:layout_marginLeft="@dimen/lv_margin"
      android:layout_toLeftOf="@id/tv_installed"
      android:text="@string/txt_label_installed"
      android:textStyle="bold" />

   <TextView
       android:id="@+id/tv_installed"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="false"
       android:layout_alignTop="@id/tv_label_installed"
       android:layout_marginLeft="@dimen/lv_margin"
       android:text="@string/txt_installed"
       android:textStyle="bold" />
   
  <TextView
      android:id="@+id/tv_label_lastupdated"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/tv_package"
      android:layout_marginLeft="@dimen/lv_margin"
      android:layout_toLeftOf="@id/tv_lastupdated"
      android:text="@string/txt_label_lastupdated"
      android:textStyle="bold" />

   <TextView
       android:id="@+id/tv_lastupdated"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignTop="@id/tv_label_lastupdated"
       android:layout_marginLeft="@dimen/lv_margin"
       android:text="@string/txt_lastupdated"
       android:textStyle="bold" />
      
</RelativeLayout>