<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/lv_margin" >

    <ImageView
        android:id="@+id/iv_category_icon"
        android:layout_width="@dimen/icon_size_m"
        android:layout_height="@dimen/icon_size_m"
        android:layout_margin="@dimen/lv_margin"
        android:contentDescription="@string/txt_blank_string" />

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lv_margin"
        android:layout_toRightOf="@id/iv_category_icon"
        android:text="@string/txt_name"
        android:textStyle="bold" />
    
   <TextView
       android:id="@+id/tv_category_description"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@id/tv_category_name"
       android:layout_below="@id/tv_category_name"
       android:text="@string/txt_description"
       android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_category_app_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tv_category_description"
        android:layout_marginRight="@dimen/lv_margin"
        android:layout_toRightOf="@id/tv_category_description"
        android:gravity="right"
        android:text="@string/txt_null" />
              
</RelativeLayout>