<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReleaseActivity" >

    <TextView
        android:id="@+id/tv_install_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/install_label_installing" />

    <TextView
        android:id="@+id/tv_install_folders_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_install_version_label"
        android:layout_below="@+id/tv_install_version_label"
        android:layout_marginTop="21dp"
        android:text="@string/install_label_create_folders" />

    <TextView
        android:id="@+id/tv_install_log_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_install_folders_label"
        android:layout_below="@+id/tv_install_folders_label"
        android:layout_marginTop="18dp"
        android:text="@string/install_label_log" />

    <TextView
        android:id="@+id/tv_install_app_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_install_version_label"
        android:layout_toRightOf="@+id/tv_install_log_label"
        android:text="@string/txt_blank_string" />

    <TextView
        android:id="@+id/tv_install_folders_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_install_log_label"
        android:layout_marginLeft="@dimen/lv_margin"
        android:layout_toRightOf="@id/tv_install_folders_label"
        android:text="@string/txt_blank_string" />

    <TextView
        android:id="@+id/tv_install_app_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_install_app_details"
        android:layout_alignParentRight="true"
        android:text="@string/txt_blank_string" />

    <TextView
        android:id="@+id/tv_install_folders_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_install_folders_details"
        android:layout_alignRight="@id/tv_install_app_status"
        android:text="@string/txt_blank_string" />
    
	<ScrollView
	    android:id="@+id/scroll_log"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/tv_install_log_label"
	    android:fillViewport="true"
	    android:scrollbars="vertical" >

    	<TextView
        	android:id="@+id/et_install_log"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@color/silver"
        	android:text="@string/txt_blank_string" />
    </ScrollView>
    
</RelativeLayout>
